--- a/libs/client/static/css/_mixins.sass
+++ b/libs/client/static/css/_mixins.sass
@@ -37,7 +37,8 @@
     code
         color: $menu_code_fg
         background-color: $menu_code_bg
-        border-radius: 4px
+        border-radius: 5px
+        padding: 4px 4px
         margin: 0 5px
 
     code.filter_label
