--- a/libs/client/static/css/footer.css
+++ b/libs/client/static/css/footer.css
@@ -12,7 +12,8 @@ footer {
 footer code {
   color: #ff8b00;
   background-color: #3a3a3a;
-  border-radius: 4px;
+  border-radius: 5px;
+  padding: 4px 4px;
   margin: 0 5px;
 }
 footer code.filter_label {
@@ -28,7 +29,7 @@ footer .tab_list {
   padding: 0;
   font-size: 16px;
   margin: 0;
-  padding: 0 20%;
+  padding: 0 10%;
   height: 45px;
 }
 footer .tab_list .li_left {
@@ -119,9 +120,13 @@ footer .footer_display .filter_ul li {
 footer .footer_display .filter_ul .filter_buttons {
   display: block;
   font-size: 16px;
-  width: 20%;
+  width: 10%;
+  height: 35px;
   text-align: right;
   float: left;
+  border-bottom-width: 1px;
+  border-bottom-color: white;
+  border-bottom-style: solid;
 }
 footer .footer_display .filter_ul .filter_buttons .expand_button {
   max-width: 20px;
@@ -167,9 +172,9 @@ footer .footer_display .filter_ul .filter_prop {
   display: block;
   font-size: 16px;
   text-align: center;
-  width: 15%;
-  line-height: 25px;
-  height: 25px;
+  width: 5%;
+  line-height: 35px;
+  height: 35px;
   float: left;
   border-right-width: 1px;
   border-right-color: white;
@@ -177,14 +182,22 @@ footer .footer_display .filter_ul .filter_prop {
   border-bottom-width: 1px;
   border-bottom-color: white;
   border-bottom-style: solid;
+}
+footer .footer_display .filter_ul .filter_prop select {
+  color: #8dedff;
+  font: 16px SF Pro Display, SF Pro Icons, Helvetica Neue, Helvetica, Arial, sans-serif;
+  background-color: #3a3a3a;
+  border-radius: 5px;
+  border-style: hidden;
+  text-align: center;
 }
 footer .footer_display .filter_ul .filter_cmp {
   display: block;
   font-size: 16px;
   text-align: center;
-  width: 15%;
-  line-height: 25px;
-  height: 25px;
+  width: 5%;
+  line-height: 35px;
+  height: 35px;
   float: left;
   border-right-width: 1px;
   border-right-color: white;
@@ -193,17 +206,38 @@ footer .footer_display .filter_ul .filter_cmp {
   border-bottom-color: white;
   border-bottom-style: solid;
 }
+footer .footer_display .filter_ul .filter_cmp select {
+  color: #8dedff;
+  font: 16px SF Pro Display, SF Pro Icons, Helvetica Neue, Helvetica, Arial, sans-serif;
+  background-color: #3a3a3a;
+  border-radius: 5px;
+  border-style: hidden;
+  text-align: center;
+}
 footer .footer_display .filter_ul .filter_val {
   display: block;
   font-size: 16px;
   text-align: center;
-  min-width: 30%;
-  line-height: 25px;
-  height: 25px;
+  min-width: 70%;
+  line-height: 35px;
+  height: 35px;
   float: left;
   border-bottom-width: 1px;
   border-bottom-color: white;
   border-bottom-style: solid;
+  text-align: left;
+}
+footer .footer_display .filter_ul .filter_val .filter_value {
+  color: #8dedff;
+  font: 16px Monaco, Consola, sans-serif;
+  min-width: 5%;
+  height: 28px;
+  background-color: #3a3a3a;
+  border-radius: 5px;
+  border-style: hidden;
+  text-align: center;
+  margin: 0 5px;
+  padding: 0 5px;
 }
 
 /*# sourceMappingURL=footer.css.map */
