--- a/libs/client/static/css/header.css
+++ b/libs/client/static/css/header.css
@@ -12,7 +12,8 @@ header {
 header code {
   color: #ff8b00;
   background-color: #3a3a3a;
-  border-radius: 4px;
+  border-radius: 5px;
+  padding: 4px 4px;
   margin: 0 5px;
 }
 header code.filter_label {
@@ -28,7 +29,7 @@ header .tab_list {
   padding: 0;
   font-size: 16px;
   margin: 0;
-  padding: 0 20%;
+  padding: 0 10%;
   height: 45px;
 }
 header .tab_list .li_left {
