--- a/libs/client/static/css/style.css
+++ b/libs/client/static/css/style.css
@@ -1,5 +1,5 @@
 body {
-  font: 120% SF Pro Display, SF Pro Icons, Helvetica Neue, Helvetica, Arial, sans-serif;
+  font: 16px SF Pro Display, SF Pro Icons, Helvetica Neue, Helvetica, Arial, sans-serif;
   background-color: black;
 }
 body code {
@@ -10,6 +10,9 @@ body code {
 }
 body code.filter_label {
   color: #1bad14;
+}
+body code {
+  font: 16px Monaco, Consola, sans-serif;
 }
 body .body_header_footer {
   padding: 45px 0px 245px 0px;
@@ -63,7 +66,7 @@ body .memthol_chart_container .close_button:hover {
   cursor: pointer;
 }
 body .memthol_chart_container .chart_header {
-  margin: 0 20%;
+  margin: 0 10%;
 }
 body .memthol_chart_container .chart_style {
   width: 100%;
@@ -89,7 +92,8 @@ header {
 header code {
   color: #ff8b00;
   background-color: #3a3a3a;
-  border-radius: 4px;
+  border-radius: 5px;
+  padding: 4px 4px;
   margin: 0 5px;
 }
 header code.filter_label {
@@ -105,7 +109,7 @@ header .tab_list {
   padding: 0;
   font-size: 16px;
   margin: 0;
-  padding: 0 20%;
+  padding: 0 10%;
   height: 45px;
 }
 header .tab_list .li_left {
@@ -193,7 +197,8 @@ footer {
 footer code {
   color: #ff8b00;
   background-color: #3a3a3a;
-  border-radius: 4px;
+  border-radius: 5px;
+  padding: 4px 4px;
   margin: 0 5px;
 }
 footer code.filter_label {
@@ -209,7 +214,7 @@ footer .tab_list {
   padding: 0;
   font-size: 16px;
   margin: 0;
-  padding: 0 20%;
+  padding: 0 10%;
   height: 45px;
 }
 footer .tab_list .li_left {
@@ -300,9 +305,13 @@ footer .footer_display .filter_ul li {
 footer .footer_display .filter_ul .filter_buttons {
   display: block;
   font-size: 16px;
-  width: 20%;
+  width: 10%;
+  height: 35px;
   text-align: right;
   float: left;
+  border-bottom-width: 1px;
+  border-bottom-color: white;
+  border-bottom-style: solid;
 }
 footer .footer_display .filter_ul .filter_buttons .expand_button {
   max-width: 20px;
@@ -348,9 +357,9 @@ footer .footer_display .filter_ul .filter_prop {
   display: block;
   font-size: 16px;
   text-align: center;
-  width: 15%;
-  line-height: 25px;
-  height: 25px;
+  width: 5%;
+  line-height: 35px;
+  height: 35px;
   float: left;
   border-right-width: 1px;
   border-right-color: white;
@@ -358,14 +367,22 @@ footer .footer_display .filter_ul .filter_prop {
   border-bottom-width: 1px;
   border-bottom-color: white;
   border-bottom-style: solid;
+}
+footer .footer_display .filter_ul .filter_prop select {
+  color: #8dedff;
+  font: 16px SF Pro Display, SF Pro Icons, Helvetica Neue, Helvetica, Arial, sans-serif;
+  background-color: #3a3a3a;
+  border-radius: 5px;
+  border-style: hidden;
+  text-align: center;
 }
 footer .footer_display .filter_ul .filter_cmp {
   display: block;
   font-size: 16px;
   text-align: center;
-  width: 15%;
-  line-height: 25px;
-  height: 25px;
+  width: 5%;
+  line-height: 35px;
+  height: 35px;
   float: left;
   border-right-width: 1px;
   border-right-color: white;
@@ -374,17 +391,38 @@ footer .footer_display .filter_ul .filter_cmp {
   border-bottom-color: white;
   border-bottom-style: solid;
 }
+footer .footer_display .filter_ul .filter_cmp select {
+  color: #8dedff;
+  font: 16px SF Pro Display, SF Pro Icons, Helvetica Neue, Helvetica, Arial, sans-serif;
+  background-color: #3a3a3a;
+  border-radius: 5px;
+  border-style: hidden;
+  text-align: center;
+}
 footer .footer_display .filter_ul .filter_val {
   display: block;
   font-size: 16px;
   text-align: center;
-  min-width: 30%;
-  line-height: 25px;
-  height: 25px;
+  min-width: 70%;
+  line-height: 35px;
+  height: 35px;
   float: left;
   border-bottom-width: 1px;
   border-bottom-color: white;
   border-bottom-style: solid;
+  text-align: left;
+}
+footer .footer_display .filter_ul .filter_val .filter_value {
+  color: #8dedff;
+  font: 16px Monaco, Consola, sans-serif;
+  min-width: 5%;
+  height: 28px;
+  background-color: #3a3a3a;
+  border-radius: 5px;
+  border-style: hidden;
+  text-align: center;
+  margin: 0 5px;
+  padding: 0 5px;
 }
 
 /*# sourceMappingURL=style.css.map */
