--- a/libs/client/static/css/_mixins.sass
+++ b/libs/client/static/css/_mixins.sass
@@ -20,6 +20,8 @@
         @include button_move_down(left)
     .close_button
         @include button_close(right)
+    .add_button
+        @include button_add(right)
 
 /// Code mixins.
 
