--- a/libs/client/static/css/body.css
+++ b/libs/client/static/css/body.css
@@ -26,7 +26,7 @@ body .h1 {
   color: #00d8ff;
 }
 body .memthol_chart_container .expand_button {
-  max-width: 20px;
+  max-width: 25px;
   float: left;
   content: url("../pics/expand.png");
 }
@@ -34,7 +34,7 @@ body .memthol_chart_container .expand_button:hover {
   cursor: pointer;
 }
 body .memthol_chart_container .collapse_button {
-  max-width: 20px;
+  max-width: 25px;
   float: left;
   content: url("../pics/collapse.png");
 }
@@ -42,7 +42,7 @@ body .memthol_chart_container .collapse_button:hover {
   cursor: pointer;
 }
 body .memthol_chart_container .move_up_button {
-  max-width: 20px;
+  max-width: 25px;
   float: left;
   content: url("../pics/arrow_up.png");
 }
@@ -50,7 +50,7 @@ body .memthol_chart_container .move_up_button:hover {
   cursor: pointer;
 }
 body .memthol_chart_container .move_down_button {
-  max-width: 20px;
+  max-width: 25px;
   float: left;
   content: url("../pics/arrow_down.png");
 }
@@ -58,11 +58,19 @@ body .memthol_chart_container .move_down_button:hover {
   cursor: pointer;
 }
 body .memthol_chart_container .close_button {
-  max-width: 20px;
+  max-width: 25px;
   float: right;
   content: url("../pics/close.png");
 }
 body .memthol_chart_container .close_button:hover {
+  cursor: pointer;
+}
+body .memthol_chart_container .add_button {
+  max-width: 25px;
+  float: right;
+  content: url("../pics/add.png");
+}
+body .memthol_chart_container .add_button:hover {
   cursor: pointer;
 }
 body .memthol_chart_container .chart_header {
