--- a/libs/client/static/css/footer.sass
+++ b/libs/client/static/css/footer.sass
@@ -38,9 +38,9 @@ footer
                 height: $cell_height
                 text-align: right
                 float: left
-                border-bottom-width: 1px
-                border-bottom-color: $white
-                border-bottom-style: solid
+                // border-bottom-width: 1px
+                // border-bottom-color: $white
+                // border-bottom-style: solid
 
             .filter_prop
                 @include hblock
