--- a/libs/client/static/css/body.css
+++ b/libs/client/static/css/body.css
@@ -73,6 +73,22 @@ body .memthol_chart_container .add_button {
 body .memthol_chart_container .add_button:hover {
   cursor: pointer;
 }
+body .memthol_chart_container .inactive_tick_button {
+  max-width: 25px;
+  float: right;
+  content: url("../pics/tick_inactive.png");
+}
+body .memthol_chart_container .inactive_tick_button:hover {
+  cursor: pointer;
+}
+body .memthol_chart_container .active_tick_button {
+  max-width: 25px;
+  float: right;
+  content: url("../pics/tick_active.png");
+}
+body .memthol_chart_container .active_tick_button:hover {
+  cursor: pointer;
+}
 body .memthol_chart_container .chart_header {
   margin: 0 10%;
 }
