--- a/libs/client/static/css/style.css
+++ b/libs/client/static/css/style.css
@@ -15,88 +15,96 @@ body code {
   font: 16px Monaco, Consola, sans-serif;
 }
 body .body_header_footer {
+  margin: 0;
+  min-height: 100vh;
   padding: 45px 0px 245px 0px;
   background-color: white;
   color: #3a3a3a;
 }
-body .body {
+body .body_header_footer .body {
   min-height: 100vh;
 }
-body .h1 {
+body .body_header_footer h1 {
   color: #00d8ff;
 }
-body .memthol_chart_container .expand_button {
+body .body_header_footer h2 {
+  color: #3a3a3a;
+}
+body .body_header_footer .memthol_chart_container {
+  .select_axis-font: 100% SF Pro Display, SF Pro Icons, Helvetica Neue, Helvetica, Arial, sans-serif;
+}
+body .body_header_footer .memthol_chart_container .expand_button {
   max-width: 25px;
   float: left;
   content: url("../pics/expand.png");
 }
-body .memthol_chart_container .expand_button:hover {
+body .body_header_footer .memthol_chart_container .expand_button:hover {
   cursor: pointer;
 }
-body .memthol_chart_container .collapse_button {
+body .body_header_footer .memthol_chart_container .collapse_button {
   max-width: 25px;
   float: left;
   content: url("../pics/collapse.png");
 }
-body .memthol_chart_container .collapse_button:hover {
+body .body_header_footer .memthol_chart_container .collapse_button:hover {
   cursor: pointer;
 }
-body .memthol_chart_container .move_up_button {
+body .body_header_footer .memthol_chart_container .move_up_button {
   max-width: 25px;
   float: left;
   content: url("../pics/arrow_up.png");
 }
-body .memthol_chart_container .move_up_button:hover {
+body .body_header_footer .memthol_chart_container .move_up_button:hover {
   cursor: pointer;
 }
-body .memthol_chart_container .move_down_button {
+body .body_header_footer .memthol_chart_container .move_down_button {
   max-width: 25px;
   float: left;
   content: url("../pics/arrow_down.png");
 }
-body .memthol_chart_container .move_down_button:hover {
+body .body_header_footer .memthol_chart_container .move_down_button:hover {
   cursor: pointer;
 }
-body .memthol_chart_container .close_button {
+body .body_header_footer .memthol_chart_container .close_button {
   max-width: 25px;
   float: right;
   content: url("../pics/close.png");
 }
-body .memthol_chart_container .close_button:hover {
+body .body_header_footer .memthol_chart_container .close_button:hover {
   cursor: pointer;
 }
-body .memthol_chart_container .add_button {
+body .body_header_footer .memthol_chart_container .add_button {
   max-width: 25px;
   float: right;
   content: url("../pics/add.png");
 }
-body .memthol_chart_container .add_button:hover {
+body .body_header_footer .memthol_chart_container .add_button:hover {
   cursor: pointer;
 }
-body .memthol_chart_container .inactive_tick_button {
+body .body_header_footer .memthol_chart_container .inactive_tick_button {
   max-width: 25px;
   float: right;
   content: url("../pics/tick_inactive.png");
 }
-body .memthol_chart_container .inactive_tick_button:hover {
+body .body_header_footer .memthol_chart_container .inactive_tick_button:hover {
   cursor: pointer;
 }
-body .memthol_chart_container .active_tick_button {
+body .body_header_footer .memthol_chart_container .active_tick_button {
   max-width: 25px;
   float: right;
   content: url("../pics/tick_active.png");
 }
-body .memthol_chart_container .active_tick_button:hover {
+body .body_header_footer .memthol_chart_container .active_tick_button:hover {
   cursor: pointer;
 }
-body .memthol_chart_container .chart_header {
+body .body_header_footer .memthol_chart_container .chart_header {
   margin: 0 10%;
 }
-body .memthol_chart_container .chart_style {
+body .body_header_footer .memthol_chart_container .chart_style {
   width: 100%;
   height: 500px;
 }
-body .memthol_chart_container .hidden_chart_style {
+body .body_header_footer .memthol_chart_container .hidden_chart_style {
   width: 100%;
   height: 500px;
   display: none;
