more work on filters

--- a/libs/client/static/css/_fonts.sass
+++ b/libs/client/static/css/_fonts.sass
@@ -4,3 +4,6 @@ $font_stack: SF Pro Display, SF Pro Icons, Helvetica Neue, Helvetica, Arial, san
 $font_code_stack: Monaco, Consola, sans-serif
 
 $font_size: 16px
+
+@mixin font_shadow
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black
