--- a/libs/client/static/css/footer.css
+++ b/libs/client/static/css/footer.css
@@ -106,6 +106,7 @@ footer .tab_list .li_left .tab_active {
   border-radius: 5px;
   padding: 14px 16px;
   text-decoration: none;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   color: white;
   background-image: linear-gradient(#8dedff, black);
 }
@@ -120,6 +121,7 @@ footer .tab_list .li_left .tab_inactive {
   border-radius: 5px;
   padding: 14px 16px;
   text-decoration: none;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   color: #8dedff;
   background-image: linear-gradient(#3a3a3a, black);
 }
@@ -128,6 +130,7 @@ footer .tab_list .li_left .tab_inactive:hover, footer .tab_list .li_left .tab_in
   cursor: pointer;
 }
 footer .tab_list .li_left .tab_inactive:hover, footer .tab_list .li_left .tab_inactive:active {
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   color: white;
   background-image: linear-gradient(#8dedff, black);
 }
@@ -141,6 +144,7 @@ footer .tab_list .li_right .tab_active {
   border-radius: 5px;
   padding: 14px 16px;
   text-decoration: none;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   color: white;
   background-image: linear-gradient(#8dedff, black);
 }
@@ -155,6 +159,7 @@ footer .tab_list .li_right .tab_inactive {
   border-radius: 5px;
   padding: 14px 16px;
   text-decoration: none;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   color: #8dedff;
   background-image: linear-gradient(#3a3a3a, black);
 }
@@ -163,6 +168,45 @@ footer .tab_list .li_right .tab_inactive:hover, footer .tab_list .li_right .tab_
   cursor: pointer;
 }
 footer .tab_list .li_right .tab_inactive:hover, footer .tab_list .li_right .tab_inactive:active {
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  color: white;
+  background-image: linear-gradient(#8dedff, black);
+}
+footer .tab_list .li_center {
+  float: center;
+}
+footer .tab_list .li_center .tab_active {
+  display: block;
+  font-size: 16px;
+  text-align: center;
+  border-radius: 5px;
+  padding: 14px 16px;
+  text-decoration: none;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  color: white;
+  background-image: linear-gradient(#8dedff, black);
+}
+footer .tab_list .li_center .tab_active:hover, footer .tab_list .li_center .tab_active:active {
+  text-decoration: underline;
+  cursor: pointer;
+}
+footer .tab_list .li_center .tab_inactive {
+  display: block;
+  font-size: 16px;
+  text-align: center;
+  border-radius: 5px;
+  padding: 14px 16px;
+  text-decoration: none;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  color: #8dedff;
+  background-image: linear-gradient(#3a3a3a, black);
+}
+footer .tab_list .li_center .tab_inactive:hover, footer .tab_list .li_center .tab_inactive:active {
+  text-decoration: underline;
+  cursor: pointer;
+}
+footer .tab_list .li_center .tab_inactive:hover, footer .tab_list .li_center .tab_inactive:active {
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   color: white;
   background-image: linear-gradient(#8dedff, black);
 }
