--- a/libs/client/static/css/style.css
+++ b/libs/client/static/css/style.css
@@ -218,6 +218,7 @@ header .tab_list .li_left .tab_active {
   border-radius: 5px;
   padding: 14px 16px;
   text-decoration: none;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   color: white;
   background-image: linear-gradient(#8dedff, black);
 }
@@ -232,6 +233,7 @@ header .tab_list .li_left .tab_inactive {
   border-radius: 5px;
   padding: 14px 16px;
   text-decoration: none;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   color: #8dedff;
   background-image: linear-gradient(#3a3a3a, black);
 }
@@ -240,6 +242,7 @@ header .tab_list .li_left .tab_inactive:hover, header .tab_list .li_left .tab_in
   cursor: pointer;
 }
 header .tab_list .li_left .tab_inactive:hover, header .tab_list .li_left .tab_inactive:active {
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   color: white;
   background-image: linear-gradient(#8dedff, black);
 }
@@ -253,6 +256,7 @@ header .tab_list .li_right .tab_active {
   border-radius: 5px;
   padding: 14px 16px;
   text-decoration: none;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   color: white;
   background-image: linear-gradient(#8dedff, black);
 }
@@ -267,6 +271,7 @@ header .tab_list .li_right .tab_inactive {
   border-radius: 5px;
   padding: 14px 16px;
   text-decoration: none;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   color: #8dedff;
   background-image: linear-gradient(#3a3a3a, black);
 }
@@ -275,6 +280,45 @@ header .tab_list .li_right .tab_inactive:hover, header .tab_list .li_right .tab_
   cursor: pointer;
 }
 header .tab_list .li_right .tab_inactive:hover, header .tab_list .li_right .tab_inactive:active {
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  color: white;
+  background-image: linear-gradient(#8dedff, black);
+}
+header .tab_list .li_center {
+  float: center;
+}
+header .tab_list .li_center .tab_active {
+  display: block;
+  font-size: 16px;
+  text-align: center;
+  border-radius: 5px;
+  padding: 14px 16px;
+  text-decoration: none;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  color: white;
+  background-image: linear-gradient(#8dedff, black);
+}
+header .tab_list .li_center .tab_active:hover, header .tab_list .li_center .tab_active:active {
+  text-decoration: underline;
+  cursor: pointer;
+}
+header .tab_list .li_center .tab_inactive {
+  display: block;
+  font-size: 16px;
+  text-align: center;
+  border-radius: 5px;
+  padding: 14px 16px;
+  text-decoration: none;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  color: #8dedff;
+  background-image: linear-gradient(#3a3a3a, black);
+}
+header .tab_list .li_center .tab_inactive:hover, header .tab_list .li_center .tab_inactive:active {
+  text-decoration: underline;
+  cursor: pointer;
+}
+header .tab_list .li_center .tab_inactive:hover, header .tab_list .li_center .tab_inactive:active {
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   color: white;
   background-image: linear-gradient(#8dedff, black);
 }
@@ -387,6 +431,7 @@ footer .tab_list .li_left .tab_active {
   border-radius: 5px;
   padding: 14px 16px;
   text-decoration: none;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   color: white;
   background-image: linear-gradient(#8dedff, black);
 }
@@ -401,6 +446,7 @@ footer .tab_list .li_left .tab_inactive {
   border-radius: 5px;
   padding: 14px 16px;
   text-decoration: none;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   color: #8dedff;
   background-image: linear-gradient(#3a3a3a, black);
 }
@@ -409,6 +455,7 @@ footer .tab_list .li_left .tab_inactive:hover, footer .tab_list .li_left .tab_in
   cursor: pointer;
 }
 footer .tab_list .li_left .tab_inactive:hover, footer .tab_list .li_left .tab_inactive:active {
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   color: white;
   background-image: linear-gradient(#8dedff, black);
 }
@@ -422,6 +469,7 @@ footer .tab_list .li_right .tab_active {
   border-radius: 5px;
   padding: 14px 16px;
   text-decoration: none;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   color: white;
   background-image: linear-gradient(#8dedff, black);
 }
@@ -436,6 +484,7 @@ footer .tab_list .li_right .tab_inactive {
   border-radius: 5px;
   padding: 14px 16px;
   text-decoration: none;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   color: #8dedff;
   background-image: linear-gradient(#3a3a3a, black);
 }
@@ -444,6 +493,45 @@ footer .tab_list .li_right .tab_inactive:hover, footer .tab_list .li_right .tab_
   cursor: pointer;
 }
 footer .tab_list .li_right .tab_inactive:hover, footer .tab_list .li_right .tab_inactive:active {
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  color: white;
+  background-image: linear-gradient(#8dedff, black);
+}
+footer .tab_list .li_center {
+  float: center;
+}
+footer .tab_list .li_center .tab_active {
+  display: block;
+  font-size: 16px;
+  text-align: center;
+  border-radius: 5px;
+  padding: 14px 16px;
+  text-decoration: none;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  color: white;
+  background-image: linear-gradient(#8dedff, black);
+}
+footer .tab_list .li_center .tab_active:hover, footer .tab_list .li_center .tab_active:active {
+  text-decoration: underline;
+  cursor: pointer;
+}
+footer .tab_list .li_center .tab_inactive {
+  display: block;
+  font-size: 16px;
+  text-align: center;
+  border-radius: 5px;
+  padding: 14px 16px;
+  text-decoration: none;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  color: #8dedff;
+  background-image: linear-gradient(#3a3a3a, black);
+}
+footer .tab_list .li_center .tab_inactive:hover, footer .tab_list .li_center .tab_inactive:active {
+  text-decoration: underline;
+  cursor: pointer;
+}
+footer .tab_list .li_center .tab_inactive:hover, footer .tab_list .li_center .tab_inactive:active {
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   color: white;
   background-image: linear-gradient(#8dedff, black);
 }
