UI filter improvements, add filter online but buggy

--- a/libs/client/static/css/_mixins.sass
+++ b/libs/client/static/css/_mixins.sass
@@ -71,11 +71,11 @@
     font-size: $font-size
 
 @mixin inactive_tab_style
-    @include font_shadow
+    @include font_black_shadow
     color: $menu_inactive_tab_fg
     background-image: linear-gradient($menu_inactive_tab_bg, $menu_bg)
 @mixin active_tab_style
-    @include font_shadow
+    @include font_black_shadow
     color: $menu_active_tab_fg
     background-image: linear-gradient($menu_active_tab_bg, $menu_bg)
 
