--- a/libs/client/static/css/_fonts.sass
+++ b/libs/client/static/css/_fonts.sass
@@ -5,5 +5,7 @@ $font_code_stack: Monaco, Consola, sans-serif
 
 $font_size: 16px
 
-@mixin font_shadow
+@mixin font_black_shadow
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black
+@mixin font_white_shadow
+    text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white
