filters in place but kinda dirty for now

--- a/libs/client/static/css/footer.sass
+++ b/libs/client/static/css/footer.sass
@@ -46,7 +46,7 @@ footer
 
             .filter_section
                 @include hblock
-                @include centered
+                float: left
                 font-size: 150%
                 color: $dark_blue
                 width: $section_width
