refresh button (offline) + cleanup/simplification/factoring in client's buttons

--- a/libs/client/static/css/_buttons.sass
+++ b/libs/client/static/css/_buttons.sass
@@ -22,6 +22,10 @@
     @include button_conf($float)
     content: url("../pics/collapse.png")
 
+@mixin button_refresh($float)
+    @include button_conf($float)
+    content: url("../pics/refresh.png")
+
 @mixin button_move_up($float)
     @include button_conf($float)
     content: url("../pics/arrow_up.png")
