--- a/libs/client/static/css/_mixins.sass
+++ b/libs/client/static/css/_mixins.sass
@@ -26,6 +26,8 @@
         @include button_tick_inactive(right)
     .active_tick_button
         @include button_tick_active(right)
+    .refresh_button
+        @include button_refresh(right)
 
 /// Code mixins.
 
