--- a/libs/client/static/css/footer.css
+++ b/libs/client/static/css/footer.css
@@ -96,6 +96,14 @@ footer .tab_list .active_tick_button {
 footer .tab_list .active_tick_button:hover {
   cursor: pointer;
 }
+footer .tab_list .refresh_button {
+  max-width: 25px;
+  float: right;
+  content: url("../pics/refresh.png");
+}
+footer .tab_list .refresh_button:hover {
+  cursor: pointer;
+}
 footer .tab_list .li_left {
   float: left;
 }
@@ -295,6 +303,14 @@ footer .footer_display .filter_ul .filter_buttons .active_tick_button {
   content: url("../pics/tick_active.png");
 }
 footer .footer_display .filter_ul .filter_buttons .active_tick_button:hover {
+  cursor: pointer;
+}
+footer .footer_display .filter_ul .filter_buttons .refresh_button {
+  max-width: 25px;
+  float: right;
+  content: url("../pics/refresh.png");
+}
+footer .footer_display .filter_ul .filter_buttons .refresh_button:hover {
   cursor: pointer;
 }
 footer .footer_display .filter_ul .filter_section {
